Fixed header overlap

--- a/src/main/resources/static/css/header.css
+++ b/src/main/resources/static/css/header.css
@@ -21,6 +21,7 @@ h1 {
 header {
     width: 100%;
     height: 70vh;
+    z-index:4;
     background-size: cover;
     background: url("../image/BG.jpg") no-repeat 50% 60%;
 
@@ -54,6 +55,7 @@ header {
 
 nav {
     position: fixed;
+    z-index:5;
     top: 0;
     width: 100%;
     line-height: 60px;
